k8s-react-nodejs-postgres/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: sreenathkk96/rnp-backend:0.0.1
          ports:
            - containerPort: 8080
