k8s-react-nodejs-postgres/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sreenathkk96/rnp-frontend:0.0.1
          stdin: true
          ports:
            - containerPort: 3000
