k8s-react-nodejs-postgres/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
